# MotionControlWithRL

./: CMakeLists.txt
control/: .enviroment.py.swp  .testWrpper.py.swp  2  coloredPrint.py  enviroment.py  environment.py  motion_control_using_rl.py  net.py  testEnv.py  testSubGazebo.py  testTerminal.py  testWrpper.py  wrapped_gazebo_prius.py
control/map/: .showRoad.py.swp  .~lock.0,1.road.ods#  0,1.road.ods  showAll.py  showPath.py  showRoad.py  track.point  vehicle.box
control/msg/: light_pb2.py
control/saved_networks/: angry-car-dqn-0.index  angry-car-dqn-130000.index  angry-car-dqn-140000.index  angry-car-dqn-150000.index  angry-car-dqn-160000.index  angry-car-dqn-170000.index  angry-car-dqn-210000.index  angry-car-dqn-220000.index  angry-car-dqn-230000.index  angry-car-dqn-240000.index  angry-car-dqn-250000.index  angry-car-dqn-380000.index  angry-car-dqn-390000.index  angry-car-dqn-400000.index  angry-car-dqn-410000.index  checkpoint  (+1 more)
control_avoid_vehicles/: environment_avoid.py  environment_no_vehicles.py  motion_control_avoid_vehicles.py  motion_control_using_rl_add_no_obstacles.py  testRandom.py
control_no_obstacles/: environment.py  environment_add.py  environment_no_vehicles.py  motion_control_using_rl_add_no_obstacles.py  net.py  reset.py  wrapped_gazebo_prius.py
plugins/: 2  CMakeLists.txt  ChongPriusPlugin.cc  ChongPriusPlugin.hh
tools/: CMakeLists.txt  prius_control.cc  pub_pos.cc  watch_collision.cc  world_control.cc
worlds/: control_city.world  no_obstacle.world  parking.world  reverse.world  simple_city.world  with_vehicles.world
(+19 files in other folders)
